# agentic-eval

./: .gitignore  CHECKLIST.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  STATUS.md  WEB_INTERFACE.md  app.py  base_agent.py  hooks.py  main.py  models.py  pipeline.py  pyproject.toml  reviewer_agent.py  scoring_agent.py  signal_agents.py  swot_agent.py  triage_agent.py  validation.py
static/: app.js
templates/: index.html
